# shareCtrlScreen

./: .gitignore  README.md
.github/workflows/: deploy-server.yml  dev-build.yml  native-ci.yml  release.yml
app/: package-lock.json  package.json  preload.js
app/main/: config.js  input.js  keyhook.js  main.js
app/renderer/: app.js  codecprobe.js  host.js  index.html  signaling.js  style.css  ui.js  viewer.js
native/: Cargo.toml  README.md  about.hbs  about.toml  deny.toml
native/app/: Cargo.toml  sharectrl.manifest  tauri.conf.json
native/app/capabilities/: default.json
native/app/src/: main.rs
native/app/ui/: app.js  index.html  style.css
native/crates/capture/: Cargo.toml
native/crates/capture/src/: lib.rs
native/crates/codec/: Cargo.toml
native/crates/codec/src/: convert.rs  decode.rs  encode.rs  lib.rs  variant.rs
native/crates/elevation/: Cargo.toml
native/crates/elevation/src/: desktop.rs  lib.rs  service.rs  session.rs
native/crates/engine/: Cargo.toml
native/crates/engine/examples/: latency_smoketest.rs
native/crates/engine/src/: handshake.rs  lib.rs  pipeline.rs  turn.rs
native/crates/input/: Cargo.toml
native/crates/input/src/: keyhook.rs  lib.rs  scancode.rs
native/crates/protocol/: Cargo.toml
native/crates/protocol/src/: config.rs  control.rs  input.rs  lib.rs  signaling.rs
native/crates/render/: Cargo.toml
native/crates/render/src/: lib.rs  window.rs
native/crates/signaling/: Cargo.toml
native/crates/signaling/src/: lib.rs
native/crates/transport/: Cargo.toml
native/crates/transport/src/: fec.rs  lib.rs  packet.rs
native/service/: Cargo.toml
native/service/src/: main.rs
pans/: 00-OVERVIEW-AND-PROTOCOL.md  01-PLAN-SIGNALING-SERVER.md  02-PLAN-CLIENT-APP.md  03-HOSTING.md  04-NATIVE-REWRITE-PLAN.md
server/: package-lock.json  package.json  wrangler.jsonc
server/src/: index.js
