[package]
name = "elevation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Services",
    "Win32_System_SystemServices",
]
