[package]
name = "transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
str0m.workspace = true
reed-solomon-simd.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
